# jazz-crypto-rs

./: .conflict-files  .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  vite.config.ts  wrapper.ts
.auto-resolution/: pnpm-lock.yaml
.auto-resolution/.github/workflows/: build.yml
.auto-resolution/scripts/: patch-wasm.js
.auto-resolution/tests/: node.test.js
.auto-resolution/wasm/src/: lib.rs
.changeset/: beige-oranges-report.md  cyan-mails-check.md  four-hornets-kiss.md  ten-cars-drive.md
.conflict-base-0/: package.json
.conflict-base-0/.changeset/: tall-guests-fold.md
.conflict-base-0/lib/: wasm-env.d.ts  wasm.ts
.conflict-base-0/tests/: node.test.js
.conflict-side-0/: .gitignore  flake.nix  tsconfig.json
.conflict-side-0/wasm/src/crypto/: sign.rs
.conflict-side-1/: README.md  package.json  pnpm-lock.yaml  rollup.config.js
.conflict-side-1/lib/: index.ts
.conflict-side-1/wasm/src/crypto/: seal.rs
.github/workflows/: build.yml  pre-release.yml  release.yml
lib/: generate-wasm.js  index.ts
src/: error.rs  index.ts
src/crypto/: ed25519.rs  encrypt.rs  x25519.rs  xsalsa20.rs
src/hash/: blake3.rs
wasm/: BENCH.md  Cargo.toml
wasm/benches/: blake3.rs  ed25519.rs  encrypt.rs  seal.rs  sign.rs  x25519.rs  xsalsa20.rs
wasm/src/crypto/: ed25519.rs  encrypt.rs  seal.rs  x25519.rs  xsalsa20.rs
